Funky spacing in hot topics fixed

--- a/css/bartertown.css
+++ b/css/bartertown.css
@@ -651,6 +651,10 @@ a.bg-info:hover {
 .panel-body:after,
 .modal-footer:before,
 .modal-footer:after,
+.flag:before,
+.flag:after,
+#hot-topics .container:before,
+#hot-topics .container:after,
 #site-header:before,
 #site-header:after,
 .content-well:before,
@@ -681,6 +685,8 @@ a.bg-info:hover {
 .pager:after,
 .panel-body:after,
 .modal-footer:after,
+.flag:after,
+#hot-topics .container:after,
 #site-header:after,
 .content-well:after,
 #site-footer:after,
@@ -7060,22 +7066,6 @@ h6 {
   min-height: 40px;
   background: #39547a;
 }
-.flag:before,
-.flag:after {
-  display: table;
-  content: " ";
-}
-.flag:after {
-  clear: both;
-}
-.flag:before,
-.flag:after {
-  display: table;
-  content: " ";
-}
-.flag:after {
-  clear: both;
-}
 .flag .branding {
   width: 150px;
   margin: 0 auto;
@@ -7125,7 +7115,7 @@ h6 {
   width: 36px + 4;
   height: 36px + 4;
   padding: 10px;
-  margin-left: -(30px / 2);
+  margin-left: -15px;
   cursor: pointer;
   background: rgba(255, 255, 255, .1);
   border: 0;
@@ -7197,22 +7187,6 @@ h6 {
 #hot-topics .container {
   overflow: hidden;
 }
-#hot-topics .container:before,
-#hot-topics .container:after {
-  display: table;
-  content: " ";
-}
-#hot-topics .container:after {
-  clear: both;
-}
-#hot-topics .container:before,
-#hot-topics .container:after {
-  display: table;
-  content: " ";
-}
-#hot-topics .container:after {
-  clear: both;
-}
 #hot-topics .container ul {
   height: 33px;
   margin: 0;
@@ -7222,28 +7196,9 @@ h6 {
 }
 #hot-topics .container ul > li:first-child {
   padding-left: 0;
-  margin-top: 11px;
-  margin-bottom: 11px;
-  font-family: "Merriweather", "Rockwell", "Times New Roman", Times, serif;
   font-family: "Oxygen", "Trebuchet MS", "Helvetica Neue", Arial, serif;
-  font-size: 14px;
-  font-size: 1.4rem;
-  font-weight: 700;
-  line-height: 1.3;
-  color: inherit;
+  font-weight: 900;
   text-transform: uppercase;
-
-  text-rendering: optimizeLegibility;
-}
-#hot-topics .container ul > li:first-child small,
-#hot-topics .container ul > li:first-child .small {
-  font-weight: normal;
-  line-height: 1;
-  color: #aaa;
-}
-#hot-topics .container ul > li:first-child small,
-#hot-topics .container ul > li:first-child .small {
-  font-size: 70%;
 }
 #hot-topics .container ul > li > a {
   font-size: 12px;
